*vdrplugin-text2skin-0.0.1-rc4 (2004/03/01)
 initial version