@@ -1,2 +1,5 @@
 MD5 534ec7e7b07f9528ef9f0a7e8ba622aa vdrplugin-text2skin-0.0.1_rc4.ebuild 1953
+MD5 75222ff9e68fb82e168d6244b9e618af vdrplugin-text2skin-0.0.1.ebuild 1949
+MD5 5a1cb5becfd70b3a2cd7a83a5456f3c6 ChangeLog 116
+MD5 c1eb304d01e8ca588f9ef5ff58660df9 files/digest-vdrplugin-text2skin-0.0.1 180
 MD5 fd9e484ad2aae9bec8534f83b82eb909 files/digest-vdrplugin-text2skin-0.0.1_rc4 184
